--- a/Manipulando dados/Manipulando Dados.ipynb
+++ b/Manipulando dados/Manipulando Dados.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "# Definição do problema\n",
     "\n",
-    "Nessa atividade, será utilizado como base de dados informações dos passageiros do Titanic para identificar quais passageiros sobreviveram. No Titanic, uma das razões que causou o naufrágio  foi que não havia botes salva-vidas suficientes para os passageiros e a tripulação. Dentre os passageiros, alguns grupos de pessoas tinham maior probabilidade de sobreviver do que outros, como mulheres, crianças e a classe alta. Dessa forma, o problema consiste em utilizar rede neural para identificar quais pessoas poderiam sobreviver."
+    "Nessa atividade, será utilizado como base de dados informações dos passageiros do Titanic para identificar quais passageiros sobreviveram. No Titanic, uma das razões que causou o naufrágio  foi que não havia botes salva-vidas suficientes para os passageiros e a tripulação. Dentre os passageiros, alguns grupos de pessoas tinham maior probabilidade de sobreviver do que outros, como mulheres, crianças e a classe alta. Dessa forma, o problema consiste em utilizar rede neural para identificar quais pessoas poderiam sobreviver. A base de dados é dividida em treino e teste, considere a base de teste titanic3.xls. Para leitura do arquivo em Python, utilize a função do Pandas para leitura de arquivos. O treino deverá ser realizado por validaçaão cruzada e por holdout e os resultados devem ser comparados."
    ]
   },
   {
